Contract Configurator 0.7.5
- SpawnPassengers now only spawns passengers on Kerbin (closes EPL exploit).
- Added requiredValue attribute to DATA nodes.
- Added CelestialBody(), Kerbal() and Vessel() functions to expressions.
- Obsolete EnterOrbit.
- Obsolete EnterSOI.
- Obsolete LandOnBody.

Contract Configurator 0.7.4
- Fix for unmanned vessels in HasCrew.
- Fix to check both vessels when undocking in HasCrew (thanks severedsolo).
- Fix for Kerbals spawning at 0 latitude, 0 longitude (thanks Wiseman).
- Support for new DATA node for storing arbitrary values for use in expressions.
- Improvements to SpawnPassengers, including an upper limit to the number of Kerbals it will spawn before reusing them (to keep the crew roster manageable).
- WaypointGenerator now supports both min and max values for RANDOM_WAYPOINT_NEAR.
- Add parameter attribute to WaypointGenerator to make waypoints dependent on a parameter.
- Improved output messages when reloading contracts through the debug menu.
- Debug window now contains details of contract groups.
- Reloading in debug window no longer causes duplicate contracts to be allowed.
- Add close icon to debug menu.
- Minor bug fixes.

Contract Configurator 0.7.3
- Fix problems with VesselDestroyed (big thanks to linuxgurugamer for his patience on this one).
- Fix HasCrew for unmanned check.  Improved parameter text slightly.
- Fix exceptions when planting flag (thanks Zach9236).
- Removing contracts (ie. uninstalling a contract pack) no longer causes exceptions in existing save games.

Contract Configurator 0.7.2
- Fix zero orbit period bug (thanks SpaceNomad).

Contract Configurator 0.7.1
- Better support for spawning landed Kerbals in SpawnKerbal.
- SpawnKerbal now supports PQS offsets.
- HasCrew improvements: moved to delegate system, add support for requiring a specific Kerbal.
- Added support for Duration datatype in expressions.
- Expression support for SpawnKerbal and WaypointGenerator behaviours.