@@ -13,6 +13,7 @@ namespace ContractConfigurator
     /// <summary>
     /// ParameterFactory wrapper for VesselHasVisited ContractParameter.
     /// </summary>
+    [Obsolete("VesselHasVisited is obsolete as of Contract Configurator 0.7.5 and will be removed in 1.0.0.  Please use Orbit or ReachState (with disableOnStateChange = true) instead.")]
     public class VesselHasVisitedFactory : ParameterFactory
     {
         protected FlightLog.EntryType situation;
@@ -24,6 +25,8 @@ namespace ContractConfigurator
 
             valid &= ConfigNodeUtil.ParseValue<FlightLog.EntryType>(configNode, "situation", x => situation = x, this);
             valid &= ValidateTargetBody(configNode);
+
+            LoggingUtil.LogWarning(this, "VesselHasVisited is obsolete as of Contract Configurator 0.7.5 and will be removed in 1.0.0.  Please use Orbit or ReachState (with disableOnStateChange = true) instead.");
 
             return valid;
         }
